Fix image layout issue
- applies negative margin top only to images at the start of articles,
  using a specific class

--- a/src/static/less/media.less
+++ b/src/static/less/media.less
@@ -61,9 +61,13 @@ p + .imagewrapper {
 
 @media @mobileWidth{
 	.imagewrapper {
-		margin:-25px -10px 0.5em -10px;
+		margin:0 -10px 0.5em -10px;
 		border-left:0;
 		border-right:0;
+		
+		&.imagewrapper--main {
+			margin-top: -25px;
+		}
 
   	.caption {
   		.fontcalculate(14);
